lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:7: error: not found: value setPousseDesiree
	setPousseDesiree(3);
        ^