lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
setPousseeDesiree(1);
while ( getY <= 600 && getY > 500) {
	setPousseeDesiree(2);
}
while (getY <= 500 && getY > 450) {
	setPousseDesiree(3);
}
while (getY <= 450) {
	setPousseeDesiree(4);
}
